src/test/deca/context/invalid/created/testInitVar/initTypeSansExpr.deca
// Description :
//    Test invalide : Tentative de déclaration d'une variable sans expr regle (0.1)
//
// Résultats :
//    Erreur contextuelle
//    Ligne 9: TypeDeclarationRequiredException: A type declaration is required for proper initialization.

{
    int = 2;
}